Fixing overflow

--- a/page/style.css
+++ b/page/style.css
@@ -8,7 +8,7 @@
     .container[data-for="contour-root"] {
         display: flex;
         flex: 1;
-        width: 100%;
+        min-width: 0;
         position: relative;
         min-height: var(--main-height);
     }
